[gd_scene load_steps=2 format=3 uid="uid://sbaty2oiojcw"]

[ext_resource type="Script" uid="uid://d138s1521uy8l" path="res://scenes/puzzles/mouse_lock.gd" id="1_akyy4"]

[node name="MouseLock" type="CanvasLayer"]
script = ExtResource("1_akyy4")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Button" type="Button" parent="Control"]
layout_mode = 0
offset_left = 392.99997
offset_top = 317.0
offset_right = 410.99997
offset_bottom = 348.0
scale = Vector2(2.8, 1.52)
text = "X"

[node name="Button3" type="Button" parent="Control"]
layout_mode = 0
offset_left = 1123.9999
offset_top = 225.0
offset_right = 1141.9999
offset_bottom = 256.0
scale = Vector2(2.8, 1.52)
text = "X"

[node name="Button4" type="Button" parent="Control"]
layout_mode = 0
offset_left = 790.0
offset_top = 346.0
offset_right = 808.0
offset_bottom = 377.0
scale = Vector2(2.8, 1.52)
text = "X"

[node name="Button2" type="Button" parent="Control"]
layout_mode = 0
offset_left = 777.99994
offset_top = 17.0
offset_right = 795.99994
offset_bottom = 48.0
scale = Vector2(2.8, 1.52)
text = "X"
